Enhance README with setup instructions
Added detailed setup instructions for the project, including database setup, IntelliJ configuration, and JavaFX VM options.